<resources>
    <!-- App settings -->
    <string name="app_name">Tessract</string>

    <!-- Buttons -->
    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_scan">Scan</string>
    <string name="button_open">Open</string>
    <string name="button_close">Close</string>
    <string name="button_select">Select</string>
    <string name="button_send">Send</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_remove">Remove</string>

    <!-- Color picker -->
    <string name="seekbar_red">R</string>
    <string name="seekbar_green">G</string>
    <string name="seekbar_blue">B</string>
    <string name="seekbar_hex">#</string>

    <!-- Dialog text -->
    <string name="dialog_notification_access_title">Enable Notification Access</string>
    <string name="dialog_notification_access_message">In order to receive application notifications, you must enable notification access for Tessract.</string>
    <string name="dialog_scan_title">Bluetooth Devices</string>
    <string name="dialog_scan_none">No devices found</string>
    <string name="dialog_scan_found">Found</string>
    <string name="dialog_scan_paired">Paired</string>
    <string name="dialog_applications_title">Applications</string>
    <string name="dialog_applications_add">Add</string>
    <string name="dialog_applications_remove_title">Remove Application</string>
    <string name="dialog_select">Select</string>

    <!-- Fragment Titles -->
    <string name="title_device">Device</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_notifications_settings">Notifications Settings</string>
    <string name="title_help">Help</string>

    <!-- Navbar -->
    <string name="nav_device">Device</string>
    <string name="nav_help">Help</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_notifications_settings">Notifications Settings</string>
    <string name="nav_options">Options</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_title">Tessract</string>
    <string name="nav_url">www.tessract.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Notification -->
    <string name="notification_title">Tessract</string>
    <string name="notification_connect">Connect</string>
    <string name="notification_connected">Connected</string>
    <string name="notification_disconnect">Disconnect</string>
    <string name="notification_disconnected">Disconnected</string>
    <string name="notification_stop">Shut down</string>

    <!-- Progress Dialog -->
    <string name="progressdialog_applications">Getting applications...</string>
    <string name="progressdialog_scan">Scanning...</string>
    <string name="progressdialog_connect">Connecting...</string>

    <!-- Snackbar -->
    <string name="snackbar_connected">Connected</string>
    <string name="snackbar_disconnected">Disconnected</string>

    <!-- TextViews -->
    <string name="textview_applications">Applications</string>
    <string name="textview_device">Device</string>
    <string name="textview_device_default">None</string>
    <string name="textview_scan">Scan Devices</string>
    <string name="textview_none">None</string>
    <string name="textview_color">Color</string>
    <string name="textview_toggle">Toggle LED</string>
    <string name="textview_action">Action</string>
    <string name="textview_amount">Amount</string>
    <string name="textview_duration">Duration</string>
    <string name="textview_repeat">Repeat</string>

    <!-- Toolbar -->
    <string name="action_settings">Settings</string>
</resources>
