<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Fragments -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_device"
            android:icon="@mipmap/ic_device"
            android:title="@string/nav_device" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@mipmap/ic_notification"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_notifications_settings"
            android:icon="@mipmap/ic_settings"
            android:title="@string/nav_notifications_settings" />


        <item
            android:id="@+id/nav_help"
            android:icon="@mipmap/ic_info"
            android:title="@string/nav_help" />
    </group>
</menu>
