<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.solderbyte.tessract.FragmentDevice">

    <!-- Device -->
    <TextView
        android:id="@+id/textview_device"
        android:text="@string/textview_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="?attr/listPreferredItemHeight"
        android:maxHeight="?attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button_connect"
        android:text="@string/button_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textview_device"
        android:layout_alignBottom="@+id/textview_device"
        android:layout_alignParentEnd="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee"
        android:layout_below="@+id/textview_device" />

    <!-- Scan -->
    <TextView
        android:id="@+id/textview_scan"
        android:text="@string/textview_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="?attr/listPreferredItemHeight"
        android:maxHeight="?attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:layout_below="@+id/textview_device"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button_scan"
        android:text="@string/button_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textview_scan"
        android:layout_alignBottom="@+id/textview_scan"
        android:layout_alignParentEnd="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee"
        android:layout_below="@+id/textview_scan" />

    <!-- Color -->
    <TextView
        android:id="@+id/textview_color"
        android:text="@string/textview_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="?attr/listPreferredItemHeight"
        android:maxHeight="?attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:layout_below="@+id/textview_scan"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/imageview_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@android:dimen/app_icon_size"
        android:minWidth="@android:dimen/app_icon_size"
        android:background="@color/colorAccent"
        android:layout_below="@+id/textview_scan"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee"
        android:layout_below="@+id/textview_color" />

    <!-- Toggle -->
    <TextView
        android:id="@+id/textview_toggle"
        android:text="@string/textview_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="?attr/listPreferredItemHeight"
        android:maxHeight="?attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:layout_below="@+id/textview_color"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Switch
        android:id="@+id/switch_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textview_toggle"
        android:layout_alignBottom="@+id/textview_toggle"
        android:layout_alignParentEnd="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee"
        android:layout_below="@+id/textview_toggle" />

</RelativeLayout>
