<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.solderbyte.tessract.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <!-- Connect -->
    <TextView
        android:text="@string/textview_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview_device"
        android:layout_alignBaseline="@+id/button_connect"
        android:layout_alignBottom="@+id/button_connect"
        android:layout_alignParentStart="true"
        android:textSize="18sp" />
    <Button
        android:text="@string/button_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/button_connect" />

    <!-- Divider -->
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee"
        android:layout_below="@+id/button_connect"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_applications"
        android:id="@+id/text_applications"
        android:layout_below="@+id/divider"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />

    <!-- List of applications -->
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_applications"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
