<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_device"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.solderbyte.tessract.ActivityDevice">

    <!-- Device -->
    <TextView
        android:id="@+id/textview_device"
        android:text="@string/textview_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="?attr/listPreferredItemHeight"
        android:maxHeight="?attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:ellipsize="marquee"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_set"
        android:text="@string/button_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textview_device"
        android:layout_alignBottom="@+id/textview_device"
        android:layout_alignParentEnd="true" />

    <!-- Color -->
    <TextView
        android:id="@+id/textview_color"
        android:text="@string/textview_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="?attr/listPreferredItemHeight"
        android:maxHeight="?attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:ellipsize="marquee"
        android:layout_below="@+id/textview_device"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/color_picker_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@android:dimen/app_icon_size"
        android:minWidth="@android:dimen/app_icon_size"
        android:background="@color/colorAccent"
        android:layout_alignTop="@+id/textview_color"
        android:layout_alignParentEnd="true" />

    <!-- Action -->
    <TextView
        android:id="@+id/textview_action"
        android:text="@string/textview_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="?attr/listPreferredItemHeight"
        android:maxHeight="?attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:ellipsize="marquee"
        android:layout_below="@+id/textview_color"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textview_action_selected"
        android:text="@string/textview_none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="?attr/listPreferredItemHeight"
        android:maxHeight="?attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:ellipsize="marquee"
        android:layout_below="@+id/textview_color"
        android:layout_alignParentEnd="true"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- Amount -->
    <TextView
        android:id="@+id/textview_amount"
        android:text="@string/textview_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="?attr/listPreferredItemHeight"
        android:maxHeight="?attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:ellipsize="marquee"
        android:layout_below="@+id/textview_action"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textview_amount_selected"
        android:text="@string/textview_none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="?attr/listPreferredItemHeight"
        android:maxHeight="?attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:ellipsize="marquee"
        android:layout_below="@+id/textview_action"
        android:layout_alignParentEnd="true"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- Duration -->
    <TextView
        android:id="@+id/textview_duration"
        android:text="@string/textview_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="?attr/listPreferredItemHeight"
        android:maxHeight="?attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:ellipsize="marquee"
        android:layout_below="@+id/textview_amount"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textview_duration_selected"
        android:text="@string/textview_none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="?attr/listPreferredItemHeight"
        android:maxHeight="?attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:ellipsize="marquee"
        android:layout_below="@+id/textview_amount"
        android:layout_alignParentEnd="true"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- Repeat -->
    <TextView
        android:id="@+id/textview_repeat"
        android:text="@string/textview_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="?attr/listPreferredItemHeight"
        android:maxHeight="?attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:ellipsize="marquee"
        android:layout_below="@+id/textview_duration"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textview_repeat_selected"
        android:text="@string/textview_none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="?attr/listPreferredItemHeight"
        android:maxHeight="?attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:ellipsize="marquee"
        android:layout_below="@+id/textview_duration"
        android:layout_alignParentEnd="true"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
